@@ -67,11 +67,15 @@ en una maquina con el sistema operativo objetivo, por ejemplo si se quiere
 un instalador msi para dispositivos windows, se tiene que ejecutar el script
 en una pc con windows 7 o superior.<br>
 
-Los scripts utilizan jpackage , jdeps y jlink. 
+Los scripts utilizan jpackage , jdeps y jlink.
 [Ver el proyecto JPackageScriptFX](https://github.com/dlemmermann/JPackageScriptFX.git)
 para mas información.
 
 > NOTA: **JAVA_HOME**, variable de entorno, tiene que estar correctamente configurado.
+> ``` 
+> $ echo $JAVA_HOME                                                                                                                            ─╯
+>/usr/lib/jvm/java-17-openjdk 
+> ```
 
 ### Preparar el proyecto
 
@@ -142,6 +146,11 @@ Get-Content .env | ForEach-Object {
 
 ### Generar instalador para Linux
 
+* Tipos de instaladores soportados
+  * deb (Una distribución debian)
+  * rpm (Una distribución redhat)
+  * app-image (Probado solo en archlinux)
+
 #### 1. Establecer las variables de entorno
 
 El siguiente comando recorrera cada una de las variables especificadas
@@ -156,3 +165,45 @@ export $(cat .env | xargs)
 ```bash
 ./installers/installer-linux.sh
 ```
+
+## ¿ Problemas con el empaquetado final del instalador ?
+Si la aplicación final generado con el instalador, falla de manera extraña
+sin razón alguna, puede deberse a que falta un modulo en el empaquetado final.
+
+Modificar el bloque de codigo jlink --add-modules:
+```bash
+# ...
+
+echo "creating java runtime image"
+$JAVA_HOME/bin/jlink \
+  --strip-native-commands \
+  --no-header-files \
+  --no-man-pages  \
+  --compress=2  \
+  --strip-debug \
+  --add-modules "${detected_modules}${manual_modules}" \
+  --output target/java-runtime
+  
+# ...
+```
+A lo siguiente:
+```bash
+# ...
+
+echo "creating java runtime image"
+$JAVA_HOME/bin/jlink \
+  --strip-native-commands \
+  --no-header-files \
+  --no-man-pages  \
+  --compress=2  \
+  --strip-debug \
+  --add-modules ALL-MODULE-PATH \
+  --output target/java-runtime
+# solo modificar --add-modules 
+# ...
+```
+
+> Nota: Puede listar todos los modulos disponibles en java
+> ``` 
+> $ java --list-modules 
+> ```
